--- a/Friends/HeaderView.xib
+++ b/Friends/HeaderView.xib
@@ -15,7 +15,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNd-hD-ihW">
-                    <rect key="frame" x="15" y="14.5" width="42" height="21"/>
+                    <rect key="frame" x="186" y="14.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -24,8 +24,8 @@
             <viewLayoutGuide key="safeArea" id="TIB-Nb-5dz"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="eNd-hD-ihW" firstAttribute="centerX" secondItem="cxO-f2-ZYA" secondAttribute="centerX" id="XM9-kL-aej"/>
                 <constraint firstItem="eNd-hD-ihW" firstAttribute="centerY" secondItem="cxO-f2-ZYA" secondAttribute="centerY" id="mYH-N1-wOh"/>
-                <constraint firstItem="eNd-hD-ihW" firstAttribute="leading" secondItem="cxO-f2-ZYA" secondAttribute="leading" constant="15" id="s4c-zQ-IMN"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
