--- a/gb_ui/Base.lproj/Main.storyboard
+++ b/gb_ui/Base.lproj/Main.storyboard
@@ -308,14 +308,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QuW-1R-jJg">
-                                <rect key="frame" x="10" y="98" width="394" height="580"/>
+                                <rect key="frame" x="20" y="158" width="374" height="580"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="pRJ-8D-y6u" appends="YES" id="4QS-Fe-1tc"/>
                                 </connections>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zgC-P4-xmd" userLabel="Previous">
+                                <rect key="frame" x="3" y="437" width="14" height="22"/>
+                                <state key="normal" image="chevron.left" catalog="system"/>
+                                <connections>
+                                    <action selector="previousPressed:" destination="up4-0S-0Ku" eventType="touchUpInside" id="pwR-F1-VpC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwQ-70-qxL" userLabel="Next">
+                                <rect key="frame" x="397" y="437" width="14" height="22"/>
+                                <state key="normal" image="chevron.right" catalog="system"/>
+                                <connections>
+                                    <action selector="nextPressed:" destination="up4-0S-0Ku" eventType="touchUpInside" id="cZT-cu-edx"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9PP-0e-qBj" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
-                                <rect key="frame" x="359" y="693" width="50" height="30"/>
+                                <rect key="frame" x="359" y="753" width="50" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="c2A-1y-ZGe"/>
                                     <constraint firstAttribute="width" constant="50" id="y9x-uT-oQB"/>
@@ -325,11 +339,17 @@
                         <viewLayoutGuide key="safeArea" id="7pM-Ec-qzg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="QuW-1R-jJg" firstAttribute="top" secondItem="7pM-Ec-qzg" secondAttribute="top" constant="10" id="MLW-fr-r3X"/>
+                            <constraint firstItem="zgC-P4-xmd" firstAttribute="centerY" secondItem="QuW-1R-jJg" secondAttribute="centerY" id="29u-yY-tEM"/>
+                            <constraint firstItem="7pM-Ec-qzg" firstAttribute="trailing" secondItem="zwQ-70-qxL" secondAttribute="trailing" constant="3" id="5ew-fz-K6k"/>
                             <constraint firstItem="9PP-0e-qBj" firstAttribute="trailing" secondItem="7pM-Ec-qzg" secondAttribute="trailing" constant="-5" id="Nij-4t-5W7"/>
+                            <constraint firstItem="QuW-1R-jJg" firstAttribute="centerY" secondItem="A9C-X2-hha" secondAttribute="centerY" id="U2L-uu-t9C"/>
                             <constraint firstItem="9PP-0e-qBj" firstAttribute="top" secondItem="QuW-1R-jJg" secondAttribute="bottom" constant="15" id="Xh7-FN-Ra5"/>
-                            <constraint firstItem="QuW-1R-jJg" firstAttribute="trailing" secondItem="7pM-Ec-qzg" secondAttribute="trailing" constant="-10" id="aaJ-Ik-G4E"/>
-                            <constraint firstItem="QuW-1R-jJg" firstAttribute="leading" secondItem="7pM-Ec-qzg" secondAttribute="leading" constant="10" id="z2h-2p-5EX"/>
+                            <constraint firstItem="QuW-1R-jJg" firstAttribute="trailing" secondItem="7pM-Ec-qzg" secondAttribute="trailing" constant="-20" id="aaJ-Ik-G4E"/>
+                            <constraint firstItem="zgC-P4-xmd" firstAttribute="leading" secondItem="7pM-Ec-qzg" secondAttribute="leading" constant="3" id="cRy-LG-57S"/>
+                            <constraint firstItem="zwQ-70-qxL" firstAttribute="leading" secondItem="QuW-1R-jJg" secondAttribute="trailing" constant="3" id="hG1-FI-Tkw"/>
+                            <constraint firstItem="zwQ-70-qxL" firstAttribute="centerY" secondItem="QuW-1R-jJg" secondAttribute="centerY" id="hLC-D0-NA0"/>
+                            <constraint firstItem="QuW-1R-jJg" firstAttribute="leading" secondItem="zgC-P4-xmd" secondAttribute="trailing" constant="3" id="y67-eN-8cj"/>
+                            <constraint firstItem="QuW-1R-jJg" firstAttribute="leading" secondItem="7pM-Ec-qzg" secondAttribute="leading" constant="20" id="z2h-2p-5EX"/>
                             <constraint firstItem="QuW-1R-jJg" firstAttribute="height" secondItem="7pM-Ec-qzg" secondAttribute="height" multiplier="0.8" id="zPo-AS-zEV"/>
                         </constraints>
                     </view>
@@ -337,6 +357,8 @@
                     <connections>
                         <outlet property="image" destination="QuW-1R-jJg" id="7ij-8N-akz"/>
                         <outlet property="likeControl" destination="9PP-0e-qBj" id="FUX-CL-Teh"/>
+                        <outlet property="nextButton" destination="zwQ-70-qxL" id="VaX-wL-qkB"/>
+                        <outlet property="previousButton" destination="zgC-P4-xmd" id="H9r-dj-1Ne"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zz6-3P-sLx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -732,6 +754,8 @@
     </scenes>
     <resources>
         <image name="SARA-N1072" width="1071" height="1323"/>
+        <image name="chevron.left" catalog="system" width="96" height="128"/>
+        <image name="chevron.right" catalog="system" width="96" height="128"/>
         <image name="list.bullet.rectangle" catalog="system" width="128" height="93"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person" catalog="system" width="128" height="117"/>
